small changes to file naming

--- a/app/views/project/report/risks/add/issue.html
+++ b/app/views/project/report/risks/add/issue.html
@@ -18,9 +18,10 @@
            
 
 			{{ govukCharacterCount({
-				name: "reportReasonDeclined",
-				id: "reportReasonDeclined",
+				name: "projectRiskOutcome",
+				id: "projectRiskOutcome",
 				maxwords: 100,
+				value: data['projectRiskOutcome'],
 				label: {
 				  text: pageHeading,
 				  classes: "govuk-label--l govuk-visually-hidden",
