--- a/app/views/project/report/risks/add/more.html
+++ b/app/views/project/report/risks/add/more.html
@@ -18,7 +18,7 @@
             
             {{ govukRadios({
 				classes: "govuk-radios--inline",
-				name: "projectRisksAddMore",							
+				name: "projectRiskMore",							
 				fieldset: {
 				  legend: {
 					text: "Do you want to add any further communications?",
@@ -27,8 +27,8 @@
 					}
 				},				
 				items: [
-				  { value: "Yes~/project/report/risks/add/", text: "Yes", checked: checked("projectRisksAddMore", "Yes")  },
-				  { value: "No", text: "No", checked: checked("projectRisksAddMore", "No")  }
+				  { value: "Yes~/project/report/risks/add/", text: "Yes", checked: checked("projectRiskMore", "Yes")  },
+				  { value: "No", text: "No", checked: checked("projectRiskMore", "No")  }
 				]
 			}) }}
             
