poject risks page and new yes no

--- a/app/views/project/report/risks/add/more.html
+++ b/app/views/project/report/risks/add/more.html
@@ -14,7 +14,7 @@
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 	
 
-		<form method="post" action="/project/report/risks/" >
+		<form method="post" action="/project/report/risks/project-risks" >
             
             {{ govukRadios({
 				classes: "govuk-radios--inline",
