--- a/app/views/project/report/risks/index.html
+++ b/app/views/project/report/risks/index.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "Risks across your projects" %}
+{% set pageHeading = "Do you need to add any project risks?" %}
 {% set pageSection = "Risks" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
@@ -13,51 +13,48 @@
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 			
-		<p>Some content to explain...</p>
+		<p>Add any risks you have faced for your project Growing Community Green Spaces. We use this information to:</p>		
+		<ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+			<li>see how risks are been managed</li>
+			<li>offer you support</li>
+			<li>learn from previous issues</li>
+		</ul>
+
+		<form method="post" action="/project/?report-8-status=Completed" >	  
+		
+			{{ govukRadios({		
+				classes: "govuk-radios--inline",		
+				name: "projecRisks",
+				id: "projecRisks",				
+				fieldset: {
+				  legend: {
+					text: "Do you need to add any project risks?",
+					isPageHeading: false,
+					classes: "govuk-fieldset__legend govuk-visually-hidden"
+					}
+				},				
+				items: [
+				  { value: "Yes~/project/report/risks/add/", text: "Yes" },
+				  { value: "No", text: "No" }
+				]
+			}) }}
+
+			<div class="govuk-button-group">
+				{{ govukButton({
+				  text: "Save and continue"
+				}) }}
+
+				<!-- {{ govukButton({
+				  text: "Save as draft",
+				  classes: "govuk-button--secondary",
+				  href: "/project/?report-8-status=inProgress"
+				}) }} -->
+		  </div>
+
+		</form>
 
 	</div>
-    <div class="govuk-grid-column-full govuk-!-margin-top-3">
-
-		<form method="post" action="/project/report/risks/add/" >
-            
-           
-			
-			{{ govukButton({
-				text: "Add risk"
-			}) }}
-		
-		</form>
-        	
-		
-			{{ govukSummaryList({
-				card: {
-				title: { text: data.projectRiskTitle },
-				actions: {
-					items: [
-						{ href: "#", text: "Delete risk", visuallyHiddenText: "from the list" }				  
-					]
-				  }
-				},
-				rows: [					
-					{
-						key: { text: "Category" },
-						value: { text: data.projectRiskCategory  },
-						actions: { items: [ { href: "#", text: "Change", visuallyHiddenText: "category of risk" } ] }
-					},
-					{
-						key: { text: "What could go wrong and what would outcome be" },
-						value: { text: data.projectRiskOutcome },
-						actions: { items: [ { href: "#", text: "Change", visuallyHiddenText: "description of what could go wrong" } ] }
-					},
-					{
-						key: { text: "Pre-mitigated likelihood score" },
-						value: { text: data.projectRiskScore },
-						actions: { items: [ { href: "#", text: "Change", visuallyHiddenText: "likelihood score" } ] } 
-					}
-				]
-			}) }}    	
-
-  	</div>	  
+    
 </div>
 
 {% endblock %}
