--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -97,15 +97,19 @@
 
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Risks</h3>
                     
-                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/" >What are the main risks across your projects?</a>
+                            <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/" >Do you need to add any project risks?
+                            </a>
                             <ul class="govuk-list govuk-list--bullet">                        
                                 <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/" >What is the name of the risk?</a></li>
                                 <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/category" >What is the risk category?</a></li>
                                 <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/issues" >What might go wrong and what would the outcome be?</a></li>
                                 <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/likelihood" >What is the pre-mitigated likelihood score?</a></li>
                                 <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/more" >Do you want to add any more risks?</a></li>
+                                <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/project-risks" >Project risks</a>
                             </ul>
-                        </li>
+                            </li>
+                            
+                        
                                             
                 </li>                
             <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
