amend to listings for report

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -169,9 +169,10 @@
                                 <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/" >What is the name of the risk?</a></li>
                                 <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/category" >What is the risk category?</a></li>
                                 <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/issues" >What might go wrong and what would the outcome be?</a></li>
-                                <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/likelihood" >What is the pre-mitigated likelihood score?</a></li>
-                                <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/more" >Do you want to add any more risks?</a></li>
+                                <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/likelihood" >What is the pre-mitigated likelihood score?</a></li>                                
                             </ul>
+                            <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/more" >Do you want to add any more risks?</a></li>
+                            <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/project-risks" >Project risks</a>
                         </li>
                                             
                 </li>                
