Updated title on risks page

--- a/app/views/project/issues-risks/risks/index.html
+++ b/app/views/project/issues-risks/risks/index.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "Do you need to add any project risks?" %}
+{% set pageHeading = "Do you need to add any risks?" %}
 {% set pageSection = "Project risks" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
