Updated content in 'Postcodes' section

--- a/app/views/report/locations/change-postcode.html
+++ b/app/views/report/locations/change-postcode.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "What is the new postcode for this project?" %}
+{% set pageHeading = "What are the new postcodes for this project?" %}
 {% set pageSection = "Project locations" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
