--- a/app/views/report/locations/index.html
+++ b/app/views/report/locations/index.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "Project locations" %}
+{% set pageHeading = "Project postcodes" %}
 {% set pageSection = "Pathfinders" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
@@ -13,7 +13,7 @@
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 		
-        <p class="govuk-body">Introduction text for this section.</p>
+        <p class="govuk-body">Add postcodes for each of your projects.</p>
 
     </div>
     <div class="govuk-grid-column-full">
@@ -22,8 +22,8 @@
             <!-- <caption class="govuk-table__caption govuk-table__caption--l">Locations</caption> -->
             <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
-                    <th scope="col" class="govuk-table__header govuk-!-width-one-half">Project name</th>
-                    <th scope="col" class="govuk-table__header govuk-!-width-one-third">Location</th>
+                    <th scope="col" class="govuk-table__header govuk-!-width-one-half">Project</th>
+                    <th scope="col" class="govuk-table__header govuk-!-width-one-third">Postcodes</th>
                     <th scope="col" class="govuk-table__header"></th>
                 </tr>
             </thead>
@@ -36,22 +36,22 @@
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell">Digital Skills and Innovation Centre</td>
                     <td class="govuk-table__cell"></td>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/report/locations/add-postcode">Add location</a></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/report/locations/add-postcode">Add postcodes</a></td>
                 </tr>
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell">The Saints</td>
                     <td class="govuk-table__cell"></td>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/report/locations/add-postcode">Add location</a></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/report/locations/add-postcode">Add postcodes</a></td>
                 </tr>
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell">Weddington Road Cycle Scheme</td>
                     <td class="govuk-table__cell"></td>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/report/locations/add-postcode">Add location</a></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/report/locations/add-postcode">Add postcodes</a></td>
                 </tr>
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell">Visiting Nuneaton: Changing Perspectives</td>
                     <td class="govuk-table__cell"></td>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/report/locations/add-postcode">Add location</a></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/report/locations/add-postcode">Add postcodes</a></td>
                 </tr>
             </tbody>
           </table>
