--- a/app/views/report/locations/add-postcode.html
+++ b/app/views/report/locations/add-postcode.html
@@ -3,7 +3,7 @@
 {% set showBackLink = true %}
 
 {% set pageHeading = "What are the postcodes for this project?" %}
-{% set pageSection = "Project locations" %}
+{% set pageSection = "Project postcodes" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
