--- a/app/views/report/locations/index.html
+++ b/app/views/report/locations/index.html
@@ -3,7 +3,7 @@
 {% set showBackLink = true %}
 
 {% set pageHeading = "Project postcodes" %}
-{% set pageSection = "Pathfinders" %}
+{% set pageSection = "Project postcodes" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
