Updated titles and captions

--- a/app/views/report/locations/index.html
+++ b/app/views/report/locations/index.html
@@ -2,8 +2,8 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "Project postcodes" %}
-{% set pageSection = "Pathfinders" %}
+{% set pageHeading = "Add project postcodes" %}
+{% set pageSection = "Project postcodes" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
@@ -12,8 +12,6 @@
 	<div class="govuk-grid-column-two-thirds">
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
-		
-        <p class="govuk-body">Add postcodes for each of your projects.</p>
 
     </div>
     <div class="govuk-grid-column-full">
