--- a/app/views/report/locations/index.html
+++ b/app/views/report/locations/index.html
@@ -35,24 +35,63 @@
                 </tr>
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell">Digital Skills and Innovation Centre</td>
-                    <td class="govuk-table__cell"></td>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/report/locations/add-postcode">Add postcodes</a></td>
+                    <td class="govuk-table__cell"><a href="#" class="govuk-link">Add postcodes</a></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
                 </tr>
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell">The Saints</td>
-                    <td class="govuk-table__cell"></td>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/report/locations/add-postcode">Add postcodes</a></td>
+                    <td class="govuk-table__cell"><a href="#" class="govuk-link">Add postcodes</a></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+
+                    <!-- <a href="/report/locations/add-postcode">Add postcodes</a> -->
                 </tr>
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell">Weddington Road Cycle Scheme</td>
-                    <td class="govuk-table__cell"></td>
-                    <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/report/locations/add-postcode">Add postcodes</a></td>
+                    <td class="govuk-table__cell"><a href="#" class="govuk-link">Add postcodes</a></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
                 </tr>
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell">Visiting Nuneaton: Changing Perspectives</td>
+                    <td class="govuk-table__cell"><a href="#" class="govuk-link">Add postcodes</a></td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                </tr>
+            </tbody>
+          </table>
+
+
+
+
+
+          
+          <table class="govuk-table">
+            <caption class="govuk-table__caption govuk-table__caption--m">George Elliott Visitor Centre</caption>
+            <thead class="govuk-table__head">
+                <tr class="govuk-table__row">                    
+                    <th scope="col" class="govuk-table__header govuk-!-width-one-third">Postcodes</th>
+                    <th scope="col" class="govuk-table__header"></th>
+                </tr>
+            </thead>
+            <tbody class="govuk-table__body">
+                <tr class="govuk-table__row">                    
+                    <td class="govuk-table__cell">CV11 5QS</td>
+                    <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/report/locations/change-postcode">Edit</a></td>
+                </tr>                
+            </tbody>
+          </table>
+
+          <table class="govuk-table">
+            <caption class="govuk-table__caption govuk-table__caption--m">Digital Skills and Innovation Centre</caption>
+            <thead class="govuk-table__head">
+                <tr class="govuk-table__row">                    
+                    <th scope="col" class="govuk-table__header govuk-!-width-one-third">Postcodes</th>
+                    <th scope="col" class="govuk-table__header"></th>
+                </tr>
+            </thead>
+            <tbody class="govuk-table__body">
+                <tr class="govuk-table__row">                    
                     <td class="govuk-table__cell"></td>
                     <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/report/locations/add-postcode">Add postcodes</a></td>
-                </tr>
+                </tr>                
             </tbody>
           </table>
 
