Updated risks page

--- a/app/views/project/issues-risks/risks/index.html
+++ b/app/views/project/issues-risks/risks/index.html
@@ -28,7 +28,7 @@
 				id: "projecRisks",				
 				fieldset: {
 				  legend: {
-					text: "Do you need to add any project risks?",
+					text: "Do you need to add any risks?",
 					isPageHeading: false,
 					classes: "govuk-fieldset__legend govuk-visually-hidden"
 					}
