--- a/app/views/project/report/risks/index.html
+++ b/app/views/project/report/risks/index.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "Do you need to add any project risks?" %}
+{% set pageHeading = "Do you need to add any risks?" %}
 {% set pageSection = "Risks" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
@@ -13,9 +13,9 @@
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 			
-		<p>Add any risks you have faced for your project Growing Community Green Spaces. We use this information to:</p>		
+		<p>We use this information to:</p>		
 		<ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
-			<li>see how risks are been managed</li>
+			<li>see how risks are being managed</li>
 			<li>offer you support</li>
 			<li>learn from previous issues</li>
 		</ul>
