Updated the risk catagories

--- a/app/views/project/report/risks/add/index.html
+++ b/app/views/project/report/risks/add/index.html
@@ -22,7 +22,7 @@
                   isPageHeading: false
                 },     
 				hint: {
-					text: "For example, Planting more trees may be delayed."
+					text: "For example, 'Building materials - supplier problem'."
 				},
                 classes: "govuk-!-width-two-thirds",           
                 id: "projectRiskTitle",
