--- a/app/views/project/report/risks/add/issue.html
+++ b/app/views/project/report/risks/add/issue.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "What might go wrong and what would the outcome be?" %}
+{% set pageHeading = "Why is this a risk?" %}
 {% set pageSection = "Risks" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
@@ -28,7 +28,7 @@
 				  isPageHeading: false
 				},
 				hint: {
-				  text: "Do not include any personal information like phone numbers or email addresses"
+				  text: "Explain what might go wrong and what the outcome could be"
 				}
 		  }) }}     
 			
