Updated typos in categories

--- a/app/views/project/report/risks/add/category.html
+++ b/app/views/project/report/risks/add/category.html
@@ -31,7 +31,7 @@
 				},
 				items: [
 				  { value: "Arm’s length body risks", text: "Arm’s length body", checked: checked("projectRiskCategory", "Arm’s length body") },
-				  { value: "Commercial or precurement", text: "Commercial or precurement", checked: checked("projectRiskCategory", "Commercial or precurement") },
+				  { value: "Commercial or procurement", text: "Commercial or procurement", checked: checked("projectRiskCategory", "Commercial or procurement") },
 				  { value: "Delivery partner", text: "Delivery partner", checked: checked("projectRiskCategory", "Delivery partner") },
 				  { value: "Financial flexibility", text: "Financial flexibility", checked: checked("projectRiskCategory", "Financial flexibility") },
 				  { value: "Governance risks", text: "Governance", checked: checked("projectRiskCategory", "Governance") },
