task list additions

--- a/app/views/project/report/progress/milestones.html
+++ b/app/views/project/report/progress/milestones.html
@@ -20,7 +20,7 @@
 			<li>organise a ministerial visit</li>
 		</ul>
 
-		<form method="post" action="#" >
+		<form method="post" action="/project/pathfinders-report?reportSectionOne=complete" >
             
 			{{ govukCharacterCount({
 				name: "projectIssueMeasures",
