--- a/app/views/includes/task-pathfinders.html
+++ b/app/views/includes/task-pathfinders.html
@@ -1,60 +1,10 @@
-<h2 class="govuk-heading-m">Project overview</h2>
 
-<ul class="govuk-task-list">
-	<li class="govuk-task-list__item govuk-task-list__item--with-link">
-		<div class="govuk-task-list__name-and-hint">
-			<a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="/project/report/progress/completion-date" aria-describedby="report-details-1-status">Programme progress</a>
-	  	</div>
-	  	<div class="govuk-task-list__status" id="report-details-1-status">			
-			{% if data['report-1-status'] == "Completed" %}
-				Completed
-			{% elif data['report-1-status'] == "inProgress" %}
-				<strong class="govuk-tag govuk-tag--light-blue">In progress</strong>
-			{% else %}
-				<strong class="govuk-tag govuk-tag--blue">Not yet started</strong>
-			{% endif %}
-		</div>
-	</li>
-	<li class="govuk-task-list__item govuk-task-list__item--with-link">
-		<div class="govuk-task-list__name-and-hint">
-			<a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="/report/locations/" aria-describedby="report-2-status">Project locations</a>
-	  	</div>
-	  	<div class="govuk-task-list__status" id="report-2-status">			
-			{% if data['report-2-status'] == "Completed" %}
-				Completed
-			{% elif data['report-2-status'] == "inProgress" %}
-				<strong class="govuk-tag govuk-tag--light-blue">In progress</strong>
-			{% else %}
-				<strong class="govuk-tag govuk-tag--blue">Not yet started</strong>
-			{% endif %}
-		</div>
-	</li>
-	<li class="govuk-task-list__item govuk-task-list__item--with-link">
-		<div class="govuk-task-list__name-and-hint">
-			<a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="/project/report/rag/" aria-describedby="report-3-status">RAG ratings</a>
-	  	</div>
-	  	<div class="govuk-task-list__status" id="report-3-status">			
-			{% if data['report-3-status'] == "Completed" %}
-				Completed
-			{% elif data['report-3-status'] == "inProgress" %}
-				<strong class="govuk-tag govuk-tag--light-blue">In progress</strong>
-			{% else %}
-				<strong class="govuk-tag govuk-tag--blue">Not yet started</strong>
-			{% endif %}
-		</div>
-	</li>
-	<li class="govuk-task-list__item govuk-task-list__item--with-link">
-		<div class="govuk-task-list__name-and-hint">
-			<a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="/project/report/risks/" aria-describedby="report-4-status">Risks</a>
-	  	</div>
-	  	<div class="govuk-task-list__status" id="report-4-status">			
-			{% if data['report-4-status'] == "Completed" %}
-				Completed
-			{% elif data['report-4-status'] == "inProgress" %}
-				<strong class="govuk-tag govuk-tag--light-blue">In progress</strong>
-			{% else %}
-				<strong class="govuk-tag govuk-tag--blue">Not yet started</strong>
-			{% endif %}
-		</div>
-	</li>	
-  </ul>
+	{{ govukTaskList({
+		idPrefix: "company-details",
+		items: [
+			{ title: { text: "Programme progress" }, href: "/project/report/progress/completion-date", status: { tag: { text: "Completed" if data['reportSectionOne'] == "complete" else "Incomplete", classes: "govuk-tag--green" if data['reportSectionOne'] == "complete" else "govuk-tag--blue" } } },
+			{ title: { text: "Project locations" }, href: "/report/locations/", status: { tag: { text: "Completed" if data['reportSectionTwo'] == "complete" else "Incomplete", classes: "govuk-tag--green" if data['reportSectionTwo'] == "complete" else "govuk-tag--blue" } } },
+			{ title: { text: "RAG ratings" }, href: "/project/report/rag/", status: { tag: { text: "Completed" if data['reportSectionThree'] == "complete" else "Incomplete", classes: "govuk-tag--green" if data['reportSectionThree'] == "complete" else "govuk-tag--blue" } } },
+			{ title: { text: "Risks" }, href: "/project/report/risks/", status: { tag: { text: "Completed" if data['reportSectionFour'] == "complete" else "Incomplete", classes: "govuk-tag--green" if data['reportSectionFour'] == "complete" else "govuk-tag--blue" } } }
+		]
+  	}) }}
