--- a/app/views/project/report/risks/add/category.html
+++ b/app/views/project/report/risks/add/category.html
@@ -51,8 +51,8 @@
 				  { value: "Slippage", text: "Slippage", checked: checked("projectRiskCategory", "Slippage") },
 				  { value: "Strategy risks", text: "Strategy risks", checked: checked("projectRiskCategory", "Strategy") },
 				  { value: "Subsidy control", text: "Subsidy control", checked: checked("projectRiskCategory", "Subsidy control") },
-				  { value: "System or IT infrastructure", text: "System or IT infrastructure", checked: checked("projectRiskCategory", "System or IT infrastructure") },
-				  { value: "Other", text: "Other", checked: checked("projectRiskCategory", "Other") }
+				  { value: "System or IT infrastructure", text: "System or IT infrastructure", checked: checked("projectRiskCategory", "System or IT infrastructure") }
+				  
 				]
 			}) }}           
 			
@@ -61,6 +61,9 @@
 			}) }}			  	
 
 		</form>
+
+
+		<!-- { value: "Other", text: "Other", checked: checked("projectRiskCategory", "Other") } -->
 
   	</div>
 
