--- a/app/views/project/report/risks/add/impact.html
+++ b/app/views/project/report/risks/add/impact.html
@@ -26,11 +26,11 @@
 				  }
 				},
 				items: [
-				  { value: "Extremely Unlikely", text: "Extremely Unlikely", checked: checked("projectRiskImpactScore", "Extremely Unlikely") },
+				  { value: "Extremely unlikely", text: "Extremely unlikely", checked: checked("projectRiskImpactScore", "Extremely unlikely") },
 				  { value: "Unlikely", text: "Unlikely", checked: checked("projectRiskImpactScore", "Unlikely") },
 				  { value: "Neutral", text: "Neutral", checked: checked("projectRiskImpactScore", "Neutral") },
 				  { value: "Likely", text: "Likely", checked: checked("projectRiskImpactScore", "Likely") },
-				  { value: "Extremely Likely", text: "Extremely Likely", checked: checked("projectRiskImpactScore", "Extremely Likely") }
+				  { value: "Extremely likely", text: "Extremely likely", checked: checked("projectRiskImpactScore", "Extremely likely") }
 				]
 			}) }}  
 
