--- a/app/views/project/report/risks/add/impact.html
+++ b/app/views/project/report/risks/add/impact.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "What is the pre-mitigated impact score?" %}
+{% set pageHeading = "How likely is it that this risk will impact delivery?" %}
 {% set pageSection = "Risks" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
@@ -11,7 +11,9 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 
-    	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
+    	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}     
+		
+		<p>KATE - Your answer should take into consideration how likely the risk is to become an issue before mitigation. </p>
 	
 		<form method="post" action="/project/report/risks/add/mitigation" >
             
