amended the sign off pages

--- a/app/views/emails/report-signed-off-confirmation-reporter.html
+++ b/app/views/emails/report-signed-off-confirmation-reporter.html
@@ -19,11 +19,11 @@
 
     <h1 class="govuk-heading-l">{{ title }}</h1>        
     
-    <p>Your report has been signed off by:</p>
+    <p>Your report has been signed off by the Section 151 Officer.</p>
       
-      <ul class="govuk-list govuk-list--bullet">
+      <!-- <ul class="govuk-list govuk-list--bullet">
         <li>Kate Harries - Section 151 Officer</li>
-        <li>Brian Coult - Chief Finance Officer</li></ul>
+        <li>Brian Coult - Chief Finance Officer</li></ul> -->
       
       <p>It has now been submitted to Pathfinders.</p>
 
