--- a/app/views/project/sign-off/index.html
+++ b/app/views/project/sign-off/index.html
@@ -24,7 +24,7 @@
 	  
       
       	<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-      	<p class="govuk-body-l">Option to view or download report, don't include lines, only as illustration. (TBC)</p>
+      	<p class="govuk-body-l">Report would show here for review</p>
       	<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 		
 		  <p class="govuk-body">You can now:</p>
