--- a/app/views/emails/section151.html
+++ b/app/views/emails/section151.html
@@ -33,7 +33,7 @@
 
     <p>If there are any issues with the report, you can decline it so ((user_name)) can correct it and resend. When you decline a report, you’ll be able to explain why and the reporter will be able to make amendments before resending for review.</p>
 
-    <p>You need to review the report by 14 July 2024.</p>
+    <p>You need to review the report by (( date )).</p>
 
     <p><a href="/sign-in?userType=Section151">Sign in to review the report</a></p>
 
