--- a/app/views/project/report/check-your-answers.html
+++ b/app/views/project/report/check-your-answers.html
@@ -24,16 +24,18 @@
 	</dl>
 
 	<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-		<p class="govuk-body-l">Check answers shown here don’t include lines, only as illustration</p>
+		<p class="govuk-body-l">Report would show here for review</p>
 		<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-		<p class="govuk-body">You can now send your report to be reviewed by:</p>		
+		<div class="govuk-inset-text">
+		<p class="govuk-body">You can now send your report to be reviewed by the Section 151 Officer.</p>		
 
-		<ul class="govuk-list govuk-list--bullet">
+		<!-- <ul class="govuk-list govuk-list--bullet">
 			<li>Kate Harries - Section 151 Officer</li>
-			<li>Brian Coult - Chief Finance Officer</li></ul>
+		</ul>			 -->
 
 		<p class="govuk-body">We will send an email to let them know that the report is ready to be reviewed.</p>	
+	</div>
 
 		<form method="post" action="/project/report/confirmation" >
 
