small changes during playback

--- a/app/views/report/locations/index.html
+++ b/app/views/report/locations/index.html
@@ -62,7 +62,7 @@
 
 
           
-          <table class="govuk-table">
+          <!-- <table class="govuk-table">
             <caption class="govuk-table__caption govuk-table__caption--m">George Elliott Visitor Centre</caption>
             <thead class="govuk-table__head">
                 <tr class="govuk-table__row">                    
@@ -92,7 +92,7 @@
                     <td class="govuk-table__cell govuk-table__cell--numeric"><a href="/report/locations/add-postcode">Add postcodes</a></td>
                 </tr>                
             </tbody>
-          </table>
+          </table> -->
 
 
           <form method="post" action="/report/locations/" >        
