--- a/app/views/emails/report-declined.html
+++ b/app/views/emails/report-declined.html
@@ -18,11 +18,11 @@
   <div class="govuk-grid-column-two-thirds">
 
     <h1 class="govuk-heading-l">{{ title }}</h1>        
-    <p>Your report for ((fund_name)) has been declined by:</p>
-    <ul class="govuk-list govuk-list--bullet">
+    <p>Your report for ((fund_name)) has been declined by the Section 151 Officer.</p>
+    <!-- <ul class="govuk-list govuk-list--bullet">
       <li>Kate Harries - Section 151 Officer</li>
       <li>Brian Coult - Chief Finance Officer</li></ul>
-    
+     -->
 
     <div class="govuk-inset-text">
       <p>Reporting period: <strong>July 2023 to September 2023</strong></p>
