--- a/app/views/project.html
+++ b/app/views/project.html
@@ -24,13 +24,12 @@
 
 		<h2 class="govuk-heading-m">Reports due</h2>
 		{{ govukSummaryList({				
-			card: { title: { text: "Due by 10 December 2024" }, actions: { items: [ { href: "/project/", classes: "govuk-link--no-visited-state", text: "Start report", visuallyHiddenText: "for this project" } ] } },	
+			card: { title: { text: "Due by 10 December 2024" }, actions: { items: [ { href: "/project/pathfinders-report", classes: "govuk-link--no-visited-state", text: "Start report", visuallyHiddenText: "for this project" } ] } },	
 			rows: [				
 				
-				{ key: { text: "Reporting period" }, value: { html: "1 April 2024 to 30 September 2024" } },
-				{ key: { text: "Project location" }, value: { html: "26 July 2024" } },
-				{ key: { text: "Reporters" }, value: { html: "Gemma Currie, Lukas Dibben" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "Change", visuallyHiddenText: "for this project" } ] } },
-				{ key: { text: "Sign-off" }, value: { html: "Kate Harries, Brian Coult" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "Change", visuallyHiddenText: "for this project" } ] } }
+				{ key: { text: "Reporting period" }, value: { html: "1 April 2024 to 30 September 2024" } },				
+				{ key: { text: "Reporters" }, value: { html: "Gemma Currie" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "Change", visuallyHiddenText: "for this project" } ] } },
+				{ key: { text: "Sign-off" }, value: { html: "Kate Harries" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "Change", visuallyHiddenText: "for this project" } ] } }
 				
 			]
 	  	}) }}
@@ -46,10 +45,9 @@
 			card: { title: { text: "Submitted 30 May 2024" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "View report", visuallyHiddenText: "for this project" } ] } },	
 			rows: [				
 				
-				{ key: { text: "Reporting period" }, value: { html: "November 2023 to January 2024" } },
-				{ key: { text: "Project location" }, value: { html: "26 July 2024" } },
-				{ key: { text: "Reporters" }, value: { html: "Gemma Currie, Lukas Dibben" } },
-				{ key: { text: "Sign-off" }, value: { html: "Kate Harries, Brian Coult" } }
+				{ key: { text: "Reporting period" }, value: { html: "November 2023 to January 2024" } },				
+				{ key: { text: "Reporters" }, value: { html: "Gemma Currie" } },
+				{ key: { text: "Sign-off" }, value: { html: "Kate Harries" } }
 				
 			]
 	  	}) }}
@@ -58,10 +56,9 @@
 			card: { title: { text: "Submitted 28 February 2024" }, actions: { items: [ { href: "/project", classes: "govuk-link--no-visited-state", text: "View report", visuallyHiddenText: "for this project" } ] } },	
 			rows: [				
 				
-				{ key: { text: "Reporting period" }, value: { html: "August 2023 to October 2023" } },
-				{ key: { text: "Project location" }, value: { html: "26 July 2024" } },
-				{ key: { text: "Reporters" }, value: { html: "Gemma Currie, Lukas Dibben" } },
-				{ key: { text: "Sign-off" }, value: { html: "Kate Harries, Brian Coult" } }
+				{ key: { text: "Reporting period" }, value: { html: "August 2023 to October 2023" } },				
+				{ key: { text: "Reporters" }, value: { html: "Gemma Currie" } },
+				{ key: { text: "Sign-off" }, value: { html: "Kate Harries" } }
 				
 			]
 	  	}) }}
