Updated activity completion date content

--- a/app/views/project/report/progress/delivery.html
+++ b/app/views/project/report/progress/delivery.html
@@ -15,9 +15,9 @@
 
 		<p>Give details about:</p>
       	<ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
-        	<li>content from Pathfinders TBC</li>
-        	<li>content from Pathfinders TBC</li>
-        	<li>content from Pathfinders TBC</li>
+        	<li>content TBC</li>
+        	<li>content TBC</li>
+        	<li>content TBC</li>
       	</ul>
 			
 
