--- a/app/views/project/report/progress/activity-completion-date.html
+++ b/app/views/project/report/progress/activity-completion-date.html
@@ -11,7 +11,9 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 
-    	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      				
+    	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      		
+		
+		<p>This is the date all activity will be completed.</p>
 
 		<form method="post" action="/project/report/progress/practical-completion-date" >
             
