--- a/app/views/project/report/progress/issues.html
+++ b/app/views/project/report/progress/issues.html
@@ -15,9 +15,9 @@
 		
 		<p>We use this information to see how we might be able to help. For example, you could tell us about:</p>
       	<ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
-        	<li>content from Pathfinders TBC</li>
-        	<li>content from Pathfinders TBC</li>
-        	<li>content from Pathfinders TBC</li>
+        	<li>content TBC</li>
+        	<li>content TBC</li>
+        	<li>content TBC</li>
 			</ul>
 
 		<form method="post" action="/project/report/progress/milestones" >
