Updated body content

--- a/app/views/project/report/progress/completion-date.html
+++ b/app/views/project/report/progress/completion-date.html
@@ -13,7 +13,7 @@
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 		
-		<p>This is the date all activity will be completed.</p>
+		<p>TThis is the date the grant funding will be paid by the local authority.</p>
 
 		<form method="post" action="/project/report/progress/activity-completion-date" >
             
