Updated content on risk flow

--- a/app/views/project/report/risks/add/category.html
+++ b/app/views/project/report/risks/add/category.html
@@ -45,14 +45,14 @@
 				  { value: "Programme or project delivery", text: "Programme or project delivery", checked: checked("projectRiskCategory", "Programme or project delivery") },
 				  { value: "Reputational Risk", text: "Reputation", checked: checked("projectRiskCategory", "Reputation") },
 
-				  { value: "Resillience", text: "Resillience", checked: checked("projectRiskCategory", "Resillience") },
+				  { value: "Resilience", text: "Resilience", checked: checked("projectRiskCategory", "Resilience") },
 				  { value: "Resource and expertise", text: "Resource and expertise", checked: checked("projectRiskCategory", "Resource and Expertise") },
 				  { value: "Security risks", text: "Security risks", checked: checked("projectRiskCategory", "Security") },
 				  { value: "Slippage", text: "Slippage", checked: checked("projectRiskCategory", "Slippage") },
 				  { value: "Strategy risks", text: "Strategy risks", checked: checked("projectRiskCategory", "Strategy") },
 				  { value: "Subsidy control", text: "Subsidy control", checked: checked("projectRiskCategory", "Subsidy control") },
-				  { value: "System or IT infrastructure", text: "System or IT infrastructure", checked: checked("projectRiskCategory", "System or IT infrastructure") }
-				  
+				  { value: "System or IT infrastructure", text: "System or IT infrastructure", checked: checked("projectRiskCategory", "System or IT infrastructure") },
+				  { value: "Other", text: "Other", checked: checked("projectRiskCategory", "Other") }
 				]
 			}) }}           
 			
@@ -61,9 +61,6 @@
 			}) }}			  	
 
 		</form>
-
-
-		<!-- { value: "Other", text: "Other", checked: checked("projectRiskCategory", "Other") } -->
 
   	</div>
 
