--- a/app/views/project/report/risks/add/impact.html
+++ b/app/views/project/report/risks/add/impact.html
@@ -13,7 +13,7 @@
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}     
 		
-		<p>KATE - Your answer should take into consideration how likely the risk is to become an issue before mitigation. </p>
+		<p>Your answer should be based on the risk level before any mitigations have been put in place. </p>
 	
 		<form method="post" action="/project/report/risks/add/mitigation" >
             
