--- a/app/views/project/report/risks/add/issue.html
+++ b/app/views/project/report/risks/add/issue.html
@@ -28,7 +28,7 @@
 				  isPageHeading: false
 				},
 				hint: {
-				  text: "Explain what might go wrong and what the outcome could be."
+				  text: "Explain what might go wrong and what the outcome could be"
 				}
 		  }) }}     
 			
