--- a/app/views/project/report/risks/add/mitigation.html
+++ b/app/views/project/report/risks/add/mitigation.html
@@ -28,7 +28,7 @@
 				  isPageHeading: false
 				},
 				hint: {
-				  text: "Explain what mitigations you have or plan to have in place to manage the risk."
+				  text: "Explain what mitigations you have, or plan to have, to manage the risk"
 				}
 		  }) }}     
 			
