small tweaks to flow logic

--- a/app/views/project/report/risks/index.html
+++ b/app/views/project/report/risks/index.html
@@ -20,7 +20,7 @@
 			<li>learn from previous issues</li>
 		</ul>
 
-		<form method="post" action="/project/?report-8-status=Completed" >	  
+		<form method="post" action="/project/report/risks/project-risks" >	  
 		
 			{{ govukRadios({		
 				classes: "govuk-radios--inline",		
@@ -40,7 +40,7 @@
 			}) }}
 			
 			{{ govukButton({
-				text: "Save and continue"
+				text: "Continue"
 			}) }}						  
 
 		</form>
