task list updates and delete risk

--- a/app/views/project/report/rag/index.html
+++ b/app/views/project/report/rag/index.html
@@ -2,7 +2,7 @@
 {% set showBackLink = true %}
 
 {% set pageHeading = "Project RAG ratings" %}
-{% set pageSection = "Pathfinders" %}
+{% set pageSection = "RAG ratings" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
