--- a/app/views/project/report/rag/rag-examples.html
+++ b/app/views/project/report/rag/rag-examples.html
@@ -2,7 +2,7 @@
 {% set showBackLink = false %}
 
 {% set pageHeading = "RAG rating examples" %}
-{% set pageSection = "" %}
+{% set pageSection = "RAG ratings" %}
 
 {% block pageTitle %}Session Data - Prototype{% endblock %}
 {% block content %}
