--- a/app/views/project/report/rag/spend.html
+++ b/app/views/project/report/rag/spend.html
@@ -2,7 +2,7 @@
 {% set showBackLink = true %}
 
 {% set pageHeading = "What is the spend RAG rating for this project?" %}
-{% set pageSection = "Project name" %}
+{% set pageSection = "RAG ratings" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
