--- a/app/views/project/report/rag/delivery.html
+++ b/app/views/project/report/rag/delivery.html
@@ -3,7 +3,7 @@
 {% set showBackLink = true %}
 
 {% set pageHeading = "What is the delivery RAG rating for this project" %}
-{% set pageSection = "Project name" %}
+{% set pageSection = "RAG ratings" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
