--- a/app/views/project/report/rag/information.html
+++ b/app/views/project/report/rag/information.html
@@ -3,7 +3,7 @@
 {% set showBackLink = true %}
 
 {% set pageHeading = "Is there anything you need to tell us about your ratings?" %}
-{% set pageSection = "Project name" %}
+{% set pageSection = "RAG ratings" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
