--- a/app/views/project/report/risks/project-risks.html
+++ b/app/views/project/report/risks/project-risks.html
@@ -11,9 +11,24 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 
+
+		{% if data['notifcation'] == "RiskDeleted" %}
+			{% set html %}
+				<h3 class="govuk-notification-banner__heading">Risk deleted</h3>
+				<p class="govuk-body">Contact <a class="govuk-notification-banner__link" href="#">example@department.gov.uk</a> if you think there’s a problem.</p>
+			{% endset %}
+
+			{{ govukNotificationBanner({
+				html: html,
+				type: "success"
+			}) }}
+		{% endif %}
+
+
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 		
 
+		
 
 
 
@@ -39,7 +54,7 @@
 				title: { text: data.projectRiskTitle },
 				actions: {
 					items: [
-						{ href: "#", text: "Delete risk", visuallyHiddenText: "from the list" }				  
+						{ href: "/project/report/risks/delete/", text: "Delete risk", visuallyHiddenText: "from the list" }				  
 					]
 				  }
 				},
