--- a/app/views/find/download-data.html
+++ b/app/views/find/download-data.html
@@ -12,6 +12,21 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 
+		{% if data['error'] == "show" %}
+		{{ govukErrorSummary({
+			titleText: "There is a problem",
+			errorList: [
+			  {
+				text: "Select which format you need",
+				href: "#"
+			  }
+			  
+			]
+		  }) }}
+
+		  {% endif %}
+
+
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 
 		<p class="govuk-body">Use the filters to select the data you need.</p>		
@@ -30,6 +45,32 @@
 		</div>
 
 		<form method="post">
+
+			{% if data['error'] == "show" %}
+
+			{{ govukRadios({			
+				name: "dataFormat",
+				fieldset: {
+				  legend: {
+					text: "Which format do you need?",
+					isPageHeading: false,
+					classes: "govuk-fieldset__legend--s"
+				  }
+				},			
+				items: [
+				  { value: "excel", text: "XLSX (Microsoft Excel)" },
+				  { value: "json", text: "JSON" }
+				],
+	
+	
+				errorMessage: {
+					text: "Select which format you need"
+				  }
+			}) }}	
+
+
+			{% else %}
+
 		{{ govukRadios({			
 			name: "dataFormat",
 			fieldset: {
@@ -43,7 +84,9 @@
 			  { value: "excel", text: "XLSX (Microsoft Excel)" },
 			  { value: "json", text: "JSON" }
 			]
-		}) }}				
+		}) }}		
+		
+		{% endif %}
 		
 		<input type="hidden" id="emailAddress" name="emailAddress" value="brian.coult@levellingup.gov.uk" />
 
@@ -54,9 +97,17 @@
 		</form>
 
 		<p class="govuk-!-font-size-19"><a class="govuk-link govuk-link--no-visited-state" href="">Access the funding glossary</a></p>
-			
+		
+
+		{% if data['error'] == "show" %}
+			<p class="govuk-!-font-size-16 govuk-!-margin-top-9"><a href="/find/download-data?error=">Hide error</a></p>
+		{% else %}
+			<p class="govuk-!-font-size-16 govuk-!-margin-top-9"><a href="/find/download-data?error=show">Show error</a></p>
+		{% endif %}
  
   	</div>	  
+
+
 </div>
 
 {% endblock %}
