added error message

--- a/app/views/find/download-data.html
+++ b/app/views/find/download-data.html
@@ -44,7 +44,7 @@
 			</ul>
 		</div>
 
-		<form method="post">
+		<form action="/find/confirmation" method="post" >
 
 			{% if data['error'] == "show" %}
 
