added delete risk

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -173,7 +173,8 @@
                             <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/mitigation" >How will you manage the risk?</a></li>                                
                             <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/more" >Do you want to add any more risks?</a></li>
                             <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/project-risks" >Project risks</a>    
-                        </ul>                            
+                        </ul>   
+                    <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/delete/" >Confirm you want to delete this risk?</a>                         
                     </li>
                                             
                                
