--- a/app/views/project/report/risks/project-risks.html
+++ b/app/views/project/report/risks/project-risks.html
@@ -91,16 +91,18 @@
 
 	</div>
 	<div class="govuk-grid-column-two-thirds">
-			<form method="post" action="/project/pathfinders-report?reportSectionFour=complete" >
-            <div class="govuk-inset-text">
-				<p class="govuk-body">You can return to this section at any time to edit it before sending your report.</p>
-			</div>
 			
-				{{ govukButton({
-					text: "Save and complete"
-				}) }}
+		<!-- <div class="govuk-inset-text"> -->
+			<p class="govuk-body">You can return to this section at any time to edit it before sending your report.</p>
+		<!-- </div> -->
+		
+		<form method="post" action="/project/pathfinders-report?reportSectionFour=complete" >
+            
+			{{ govukButton({
+				text: "Save and complete"
+			}) }}
 			
-			</form>
+		</form>
 
   	</div>	  
 </div>
